--- a/src/components/cardHolder/CardHolder.css
+++ b/src/components/cardHolder/CardHolder.css
@@ -1,7 +1,67 @@
 .cardHolder {
   width: 78%;
   background-color: white;
-  height: 70vh;
+  height: 75vh;
   border-radius: 5px;
-  margin-top: 2.7rem;
+  padding: 1.5rem;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+}
+.card {
+  height: 230px;
+  width: 31%;
+  border-radius: 5px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 5px 5px 10px -5px rgb(5, 5, 5, 0.3);
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+.cardInput {
+  outline: none;
+  border: none;
+  resize: none;
+  background-color: transparent;
+  flex: 1;
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding-bottom: 10px;
+  color: rgb(59, 58, 58);
+}
+.lower {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.date {
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+.functionality {
+  display: flex;
+  gap: 10px;
+  font-size: 1.3rem;
+}
+.pin {
+  z-index: 1;
+  text-align: center;
+  margin-top: -1.9rem;
+  color: rgb(182, 9, 9);
+  font-size: 2rem;
+}
+
+.edit:hover {
+  color: rgb(43, 43, 117);
+}
+.delete:hover {
+  color: rgb(182, 9, 9);
+}
+.edit,
+.delete {
+  cursor: pointer;
 }
