--- a/src/components/cardHolder/CardHolder.css
+++ b/src/components/cardHolder/CardHolder.css
@@ -5,13 +5,15 @@
   border-radius: 5px;
   padding: 1.5rem;
   display: flex;
-  gap: 2rem;
+  justify-content: space-evenly;
+  /* align-items: center; */
+  gap: 1.5rem;
   flex-wrap: wrap;
   overflow-y: scroll;
 }
 .card {
-  height: 230px;
-  width: 31%;
+  height: 48%;
+  flex-basis: 31.5%;
   border-radius: 5px;
   padding: 1rem;
   display: flex;
@@ -42,10 +44,8 @@
   font-size: 0.9rem;
   font-weight: bold;
 }
-.functionality {
-  display: flex;
-  gap: 10px;
-  font-size: 1.3rem;
+.delete {
+  margin-left: 10px;
 }
 .pin {
   z-index: 1;
@@ -54,14 +54,34 @@
   color: rgb(182, 9, 9);
   font-size: 2rem;
 }
-
-.edit:hover {
+.functionality {
+  display: flex;
+  font-size: 1.3rem;
+}
+.hide:hover {
   color: rgb(43, 43, 117);
 }
 .delete:hover {
   color: rgb(182, 9, 9);
 }
-.edit,
+.hide,
 .delete {
   cursor: pointer;
+}
+
+@media (max-width: 1100px) {
+  .card {
+    flex-basis: 45%;
+  }
+}
+@media (max-width: 800px) {
+  .cardHolder {
+    width: 100%;
+    height: 70vh;
+  }
+}
+@media (max-width: 600px) {
+  .card {
+    flex-basis: 70%;
+  }
 }
